--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,8 +1,5 @@
 section {
   width: 100vw;
-  max-width: 850px;
-  margin: 0 auto;
-  transform-style: inherit;
 }
 
 nav {
@@ -13,15 +10,30 @@ nav {
 }
 
 .hero {
-  height: 80vh;
-
-  &--cta {
-    width: 60vw;
-  }
+  max-width: 90rem;
+  margin: 0 auto;
+  height: 75vh;
+  // height: 80vh;
 }
 
 .about {
-  display: grid;
-  grid-template-columns: 30rem auto;
-  grid-column-gap: 3rem;
+  &__wrapper {
+    max-width: 90rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    h2,
+    h4,
+    p {
+      margin-top: 5rem;
+      z-index: 1;
+    }
+  }
+
+  &__text {
+    justify-self: flex-end;
+  }
+
+  margin-top: 5rem;
 }
