Styled about section

--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -7,11 +7,12 @@
       width: fit-content;
       margin: 0 auto;
       h4 {
-        color: hsla(0, 0%, 48%, 1);
+        color: hsla(231, 87%, 75%, 1);
       }
 
       h2 {
         margin-bottom: 4rem;
+        font-size: 3.5rem;
       }
 
       .ugly {
