--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,4 +5,4 @@ $bar-color: #97b2e7;
 $panel-color: #fff6f6;
 
 /* Header Background */
-$bg-shape-color: hsla(0, 80%, 96%, 1);
+$bg-shape-color: rgb(253, 244, 244);
