--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -65,43 +65,44 @@
   position: relative;
   &__decor {
     z-index: -2;
+
+    .arrow {
+      position: absolute;
+      fill: blue;
+      width: 5rem;
+      top: -4rem;
+      left: calc(50% - 2.5rem);
+    }
+
     .cross {
       fill: blue;
       position: absolute;
+      width: 6.5rem;
 
       &--1 {
-        width: 4.5rem;
         top: 2rem;
         right: 10rem;
       }
 
       &--2 {
-        width: 4.5rem;
         top: 83%;
         left: 8rem;
       }
 
       &--3 {
-        width: 4.5rem;
         top: 5rem;
         left: 43%;
       }
 
       &--4 {
-        width: 4.5rem;
         top: 120%;
         right: 30%;
       }
 
       &--5 {
-        width: 4.5rem;
         top: -5%;
         left: 10rem;
       }
-    }
-
-    .cross-1 {
-      width: 4rem;
     }
   }
 
@@ -135,9 +136,23 @@
     clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 50% 100%, 0 60%);
     background: radial-gradient(
       farthest-corner at 120px 190px,
-      hsla(260, 50%, 99%, 1) 0%,
-      hsla(236, 69%, 92%, 1) 53%,
+      hsla(260, 50%, 99%, 0.65) 0%,
+      hsla(236, 69%, 94%, 0.85) 43%,
       hsla(258, 74%, 99%, 1) 100%
     );
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 60rem;
+    z-index: -2;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 50% 80%, 0 50%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 50% 100%, 0 60%);
+    background-image: url(../images//circuit-board.svg);
+    opacity: 0.1;
   }
 }
