--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -38,17 +38,18 @@
 // }
 
 :root {
-  --base-size: 1em;
-  --type-scale: 1.333;
-  --p: calc(var(--base-size) * var(--type-scale));
+  --base-size: 16px;
+  --type-scale: 1.25;
+  --p: calc(var(--base-size));
+  --h5: calc(var(--p) * var(--type-scale));
   --h4: calc(var(--p) * var(--type-scale));
   --h3: calc(var(--h4) * var(--type-scale));
   --h2: calc(var(--h3) * var(--type-scale));
   --h1: calc(var(--h2) * var(--type-scale));
 
-  @media (min-width: 1000px) {
-    --base-size: 1.25em;
-  }
+  // @media (min-width: 1000px) {
+  //   --base-size: 1.25em;
+  // }
 }
 
 p {
