--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,6 @@
+/* Base Colors */
+$primary-color-blue: hsla(228, 92%, 60%, 1);
+
 /* Browser Colors */
 $browser-bg-color: #f6e9e9;
 $url-color: #555a70;
@@ -6,3 +9,6 @@ $panel-color: #fff6f6;
 
 /* Header Background */
 $bg-shape-color: rgb(253, 244, 244);
+
+/* Shapes Colors */
+$hero-bar-color: hsla(228, 92%, 60%, 1);
