--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Montserrat:400,500&display=swap");
-@import "base";
 @import "variables";
+@import "base";
 @import "typography";
 @import "components";
 @import "index";
@@ -10,4 +10,5 @@
 @import "hero";
 @import "about";
 @import "work";
+@import "background";
 @import "animations";
