--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,13 +2,11 @@
 $primary-color-blue: hsla(228, 92%, 60%, 1);
 
 /* Browser Colors */
-$browser-bg-color: #f6e9e9;
+$browser-bg-color: #e9e9f6;
 $url-color: #555a70;
 $bar-color: #97b2e7;
-$panel-color: #fff6f6;
-
-/* Header Background */
-$bg-shape-color: rgb(253, 244, 244);
+$panel-color: #f7f6ff;
 
 /* Shapes Colors */
 $hero-bar-color: hsla(228, 92%, 60%, 1);
+$bg-shape-color: hsla(235, 100%, 95%, 1);
