--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -8,12 +8,12 @@ nav {
   }
 
   .logo {
-    fill: $primary-color-blue;
+    fill: $base-color-blue;
   }
 
   .menu {
     height: 50px;
     width: 50px;
-    background: $primary-color-blue;
+    background: $base-color-blue;
   }
 }
