--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,42 +1,3 @@
-// h1 {
-//   font-size: 4.5rem;
-//   font-weight: 900;
-//   text-transform: uppercase;
-//   letter-spacing: 0.5px;
-// }
-
-// h2 {
-//   font-size: 2.5rem;
-//   font-weight: 700;
-//   color: #838383;
-//   line-height: 3.3rem;
-//   letter-spacing: 0.5px;
-// }
-
-// h3 {
-//   font-size: 1.2rem;
-//   font-weight: 400;
-//   color: #838383;
-//   text-transform: uppercase;
-//   letter-spacing: 2px;
-// }
-
-// a {
-//   font-weight: 700;
-//   font-size: 1.4rem;
-//   letter-spacing: 0.5px;
-//   color: #383838;
-
-//   &:visited {
-//     color: #5e5e5e;
-//   }
-// }
-
-// .text {
-//   font-size: 1.5rem;
-//   font-weight: 400;
-// }
-
 :root {
   --base-size: 16px;
   --type-scale: 1.25;
@@ -75,6 +36,16 @@ h3 {
 h4 {
   font-size: var(--h4);
   font-weight: 400;
+}
+
+.subTitle {
+  position: absolute;
+  transform: rotate(270deg);
+  transform-origin: 0% 0%;
+  opacity: 0.3;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-size: 1.5rem;
 }
 
 small,
