--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -1,3 +1,96 @@
 .work {
-  height: 30vh;
+  position: relative;
+  max-width: 90rem;
+  width: 100vw;
+  margin: 0 auto;
+
+  h1 {
+    color: $base-color-dark;
+    margin-bottom: 10rem;
+  }
+
+  /* Selecting the subheading under the main title */
+  h1 + h4 {
+    color: $base-color-dark;
+    left: -5rem;
+    top: 32rem;
+  }
+
+  .divider {
+    background-color: $base-color-lightgrey;
+  }
+
+  &__card {
+    --cardHeight: 35rem;
+    --mockupHeight: 230px;
+    width: 90rem;
+    height: var(--cardHeight);
+    border-radius: 1.5rem;
+    background-color: $base-color-dark;
+    color: $base-color-white;
+    margin-bottom: 8rem;
+    box-shadow: $medium-shadow;
+    position: relative;
+    overflow: hidden;
+    padding: 2rem 4rem;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      transform: translateY(-0.5rem);
+      box-shadow: (2px 30px 40px -6px hsla(0, 0%, 28%, 0.4));
+    }
+
+    &--wrapper {
+      width: fit-content;
+      margin: 0 auto;
+    }
+
+    .img__wrapper {
+      position: absolute;
+      right: 6rem;
+      top: calc((var(--cardHeight) - var(--mockupHeight)) / 2);
+    }
+
+    .card {
+      &--accent {
+        clip-path: polygon(69% 0, 100% 0, 100% 100%, 0% 100%);
+        background: radial-gradient(
+          farthest-corner at 120px 190px,
+          hsla(260, 50%, 99%, 0.65) 0%,
+          hsla(236, 69%, 94%, 0.85) 43%,
+          hsla(258, 74%, 99%, 1) 100%
+        );
+        height: 35rem;
+        width: 60rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+
+      &--title {
+        font-weight: 900;
+        font-size: 4.5rem;
+        letter-spacing: 2px;
+      }
+    }
+
+    .view {
+      &__wrapper {
+        position: absolute;
+        bottom: 2rem;
+        display: flex;
+        align-items: center;
+
+        p {
+          text-transform: lowercase;
+          letter-spacing: 1px;
+        }
+      }
+      &--arrow {
+        height: 4rem;
+        width: 4rem;
+        fill: currentColor;
+      }
+    }
+  }
 }
