--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -1,9 +1,4 @@
 .work {
-  position: relative;
-  max-width: 90rem;
-  width: 100vw;
-  margin: 0 auto;
-
   h1 {
     color: $base-color-dark;
     margin-bottom: 10rem;
@@ -13,11 +8,45 @@
   h1 + h4 {
     color: $base-color-dark;
     left: -5rem;
-    top: 32rem;
+    top: 32.5rem;
   }
 
   .divider {
     background-color: $base-color-lightgrey;
+  }
+
+  &__shapes {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    .sphere {
+      &-1 {
+        bottom: 40rem;
+        left: -10%;
+      }
+
+      &-2 {
+        right: -20%;
+        top: -10%;
+      }
+
+      &-3 {
+        left: -40rem;
+        top: 15%;
+      }
+
+      &-4 {
+        right: -10%;
+        bottom: 10rem;
+      }
+
+      &-5 {
+        right: -40rem;
+        top: 40%;
+      }
+    }
   }
 
   &__card {
@@ -60,11 +89,11 @@
           hsla(236, 69%, 94%, 0.85) 43%,
           hsla(258, 74%, 99%, 1) 100%
         );
-        height: 35rem;
+        height: calc(var(--cardHeight) + 2px);
         width: 60rem;
         position: absolute;
         top: 0;
-        right: 0;
+        right: -1px;
       }
 
       &--title {
