--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,7 @@ $base-color-blue: hsla(228, 92%, 60%, 1);
 $base-color-dark: hsla(229, 12%, 36%, 1);
 $base-color-lightgrey: hsla(230, 15%, 84%, 1);
 $base-color-white: hsla(244, 100%, 98%, 1);
+$base-color-accent: hsla(260, 97%, 59%, 1);
 
 /* Browser Colors */
 $browser-bg-color: #e9e9f6;
