--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -16,6 +16,8 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  scroll-behavior: smooth;
 }
 
 body {
