--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,8 +1,8 @@
-button {
+.btn {
   display: inline-block;
   justify-self: flex-start;
   border: none;
-  padding: 1rem 3rem;
+  padding: 0.5rem 4rem;
   margin: 0;
   text-decoration: none;
   background: rgba(0, 0, 0, 0);
@@ -12,42 +12,48 @@ button {
   font-size: var(--p);
   cursor: pointer;
   text-align: center;
-  transition: background 250ms ease-in-out, transform 150ms ease;
+  transition: background 0.3s ease-in-out, transform 150ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
 
-button:hover,
-button:focus {
+.btn {
+  &:after {
+    visibility: hidden;
+  }
+}
+
+.btn:hover,
+.btn:focus {
   background: $base-color-blue;
   color: $base-color-white;
 }
 
-button:focus {
+.btn:focus {
   outline: 1px solid $base-color-blue;
   outline-offset: -4px;
 }
 
-button:active {
+.btn:active {
   transform: scale(0.95);
 }
 
 .footer {
   &__wrapper {
     .closing {
-      button {
-        padding: 1.3rem 5rem;
+      .btn {
+        padding: 1rem 4.5rem;
         font-size: 1.6rem;
         border: 1px solid $base-color-white;
         color: currentColor;
       }
 
-      button:hover,
-      button:focus {
+      .btn:hover,
+      .btn:focus {
         background: hsla(229, 12%, 53%, 1);
       }
 
-      button:focus {
+      .btn:focus {
         outline: 1px solid $base-color-white;
         outline-offset: -4px;
       }
@@ -57,8 +63,10 @@ button:active {
 
 a {
   text-decoration: none;
-  color: $base-color-accent;
+  color: $base-color-blue;
   position: relative;
+  transition: all 0.3s ease-in-out;
+  font-weight: 400;
 
   &:after {
     content: "";
@@ -67,11 +75,11 @@ a {
     left: 0;
     height: 3px;
     width: 100%;
-    background-color: $base-color-accent;
-    z-index: -1;
     transform: scaleX(0);
-    transform-origin: 0% 0%;
-    transition: all 0.2s ease-in;
+    transform-origin: 0% 100%;
+    background-color: $base-color-accent;
+    transition: all 0.3s ease-in-out;
+    z-index: -1;
   }
 
   &:hover,
@@ -80,6 +88,7 @@ a {
 
     &:after {
       transform: scaleX(1);
+      transform-origin: 0% 100%;
     }
   }
 }
