--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -81,7 +81,7 @@ nav {
     }
 
     p,
-    button {
+    .btn {
       grid-column: 2 / -1;
     }
 
@@ -94,7 +94,7 @@ nav {
       }
     }
 
-    button {
+    .btn {
       margin-bottom: 12rem;
     }
   }
