--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,10 @@
+/* Device Sizes */
+$ds-small: 26.25em;
+$ds-medium: 53.125em;
+
 /* Base Colors */
 $base-color-blue: hsla(228, 92%, 60%, 1);
+$base-color-light: hsla(228, 92%, 90%, 1);
 $base-color-dark: hsla(229, 12%, 36%, 1);
 $base-color-lightgrey: hsla(230, 15%, 84%, 1);
 $base-color-white: hsla(244, 100%, 98%, 1);
@@ -14,6 +19,7 @@ $panel-color: #f7f6ff;
 /* Shapes Colors */
 $hero-bar-color: hsla(228, 92%, 60%, 1);
 $bg-shape-color: hsla(235, 100%, 95%, 1);
+$bg-shape-light: hsla(230, 98%, 96%, 1);
 
 /* Shadows */
 $medium-shadow: (2px 16px 33px -6px hsla(0, 0%, 28%, 0.35));
