--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   justify-self: flex-start;
   border: none;
-  padding: 0.5rem 4rem;
+  padding: 1rem 4rem;
   margin: 0;
   text-decoration: none;
   background: rgba(0, 0, 0, 0);
@@ -25,8 +25,8 @@
 
 .btn:hover,
 .btn:focus {
-  background: $base-color-blue;
-  color: $base-color-white;
+  background: $base-color-light;
+  color: $base-color-blue;
 }
 
 .btn:focus {
@@ -96,5 +96,5 @@ a {
 .divider {
   width: 10rem;
   height: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
