--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,19 +1,18 @@
 .hero {
   .heading {
-    width: fit-content;
     z-index: 1;
     .divider {
       background-color: hsla(228, 92%, 90%, 1);
     }
 
     h3 {
-      margin-bottom: 1rem;
+      margin-bottom: 2.5rem;
       line-height: 150%;
       letter-spacing: 1px;
     }
 
     h4 {
-      line-height: 150%;
+      line-height: 160%;
       letter-spacing: 0.5px;
     }
   }
@@ -21,10 +20,8 @@
   .browser {
     --width: 100%;
     display: block;
-    width: 30vw;
-    height: 18vw;
-    min-width: 40rem;
-    min-height: 27rem;
+    width: 100%;
+    height: 85%;
     border-radius: 8px;
     position: relative;
     background-color: $browser-bg-color;
@@ -75,7 +72,7 @@
         display: grid;
         grid-template-columns: 1fr 60%;
         grid-gap: 2rem;
-        height: 50%;
+        height: 47%;
         margin-left: 2rem;
         margin-right: 2rem;
       }
@@ -115,52 +112,64 @@
   }
 
   .cta {
+    z-index: 1;
     text-align: center;
-    line-height: 300%;
     letter-spacing: 0.5px;
   }
 }
 
-.bar--lgView,
-.bar--mdView {
+.bar-7 {
   visibility: hidden;
   position: absolute;
 }
 
-@media (min-width: 1600px) {
-  .bar {
-    &--mdView {
-      visibility: visible;
-      position: static;
+@media only screen and (max-width: $ds-small) {
+  .hero {
+    .heading {
+      h4 {
+        line-height: 175%;
+        margin-top: 3rem;
+        margin-bottom: 0;
+      }
+    }
+
+    .browser {
+      width: 32rem;
+      height: 20rem;
+      min-width: 32rem;
+      min-height: 20rem;
+      margin: 0 auto;
+
+      .panel {
+        margin-top: 0;
+        &__wrapper {
+          height: calc(50% - 3rem);
+        }
+      }
+
+      .sphere {
+        height: 7rem;
+        width: 7rem;
+        top: 7rem;
+      }
+
+      .dots {
+        height: 6.5rem;
+        width: 6.5rem;
+        top: 3.5rem;
+      }
+    }
+
+    .bar-5 {
+      transform: scale(0);
     }
   }
 }
 
-@media (min-width: 1800px) {
+@media only screen and (max-width: $ds-medium) {
   .hero {
     .browser {
-      .url {
-        height: 2rem;
-      }
-      .panel {
-        &__wrapper {
-          height: 45%;
-        }
-      }
-      .sphere {
-        top: 8rem;
-        left: 70%;
-      }
-      .dots {
-        top: 4.3rem;
-        left: 80%;
-      }
-    }
-  }
-  .bar {
-    &--lgView {
-      visibility: visible;
-      position: static;
+      height: 100%;
     }
   }
 }
