--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,8 @@
 /* Device Sizes */
-$ds-small: 26.25em;
-$ds-medium: 53.125em;
+$ds-small: 26.25em; // 420px
+$ds-shmedium: 31.25em; // 500px
+$ds-medium: 50em; // 800px
+$ds-large: 56.25em; // 900px
 
 /* Base Colors */
 $base-color-blue: hsla(228, 92%, 60%, 1);
