--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -21,7 +21,8 @@
     --width: 100%;
     display: block;
     width: 100%;
-    height: 85%;
+    // height: 85%;
+    height: 30rem;
     border-radius: 8px;
     position: relative;
     background-color: $browser-bg-color;
@@ -72,7 +73,7 @@
         display: grid;
         grid-template-columns: 1fr 60%;
         grid-gap: 2rem;
-        height: 47%;
+        height: 49%;
         margin-left: 2rem;
         margin-right: 2rem;
       }
@@ -123,53 +124,46 @@
   position: absolute;
 }
 
-@media only screen and (max-width: $ds-small) {
+@media only screen and (max-width: $ds-large) {
   .hero {
-    .heading {
-      h4 {
-        line-height: 175%;
-        margin-top: 3rem;
-        margin-bottom: 0;
-      }
-    }
-
     .browser {
-      width: 32rem;
-      height: 20rem;
-      min-width: 32rem;
-      min-height: 20rem;
-      margin: 0 auto;
+      height: 70%;
 
       .panel {
-        margin-top: 0;
         &__wrapper {
-          height: calc(50% - 3rem);
+          height: 39%;
         }
       }
-
-      .sphere {
-        height: 7rem;
-        width: 7rem;
-        top: 7rem;
-      }
-
-      .dots {
-        height: 6.5rem;
-        width: 6.5rem;
-        top: 3.5rem;
-      }
-    }
-
-    .bar-5 {
-      transform: scale(0);
     }
   }
 }
 
 @media only screen and (max-width: $ds-medium) {
   .hero {
+    grid-gap: 3rem 2rem;
     .browser {
-      height: 100%;
+      height: 90%;
+
+      .panel__wrapper {
+        height: 49%;
+      }
+    }
+  }
+
+  .bar-6 {
+    position: absolute;
+    transform: scale(0);
+  }
+}
+
+@media only screen and (max-width: $ds-small) {
+  .hero {
+    .browser {
+      height: 78%;
+
+      .panel__wrapper {
+        height: 43%;
+      }
     }
   }
 }
