--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -2,12 +2,12 @@
   position: relative;
 
   h4 {
-    left: calc(50% + 3.5rem);
-    top: 9.6rem;
+    margin-top: 9.7rem;
+    padding-top: 8rem;
   }
 
   p {
-    width: 38ch;
+    max-width: 38ch;
     margin-bottom: 3rem;
   }
 
