--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -39,9 +39,10 @@ h4 {
 }
 
 .subTitle {
-  position: absolute;
+  // position: absolute;
   transform: rotate(270deg);
   transform-origin: 0% 0%;
+  // text-orientation: sideways;
   opacity: 0.3;
   text-transform: uppercase;
   letter-spacing: 1.5px;
