--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -5,7 +5,7 @@
   padding: 1rem 4rem;
   margin: 0;
   text-decoration: none;
-  background: rgba(0, 0, 0, 0);
+  background: #ecedfb;
   color: $base-color-blue;
   border: 1px solid $base-color-blue;
   border-radius: 30px;
