--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -24,6 +24,10 @@
     .divider {
       background-color: hsla(229, 12%, 53%, 1);
     }
+
+    a {
+      background: rgba(0, 0, 0, 0);
+    }
   }
 
   &__terms {
