--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -153,8 +153,9 @@ nav {
   .about {
     &__wrapper {
       grid-template-columns: 1fr minmax(300px, 555px) 1fr;
-      grid-template-rows: auto 320px auto;
+      grid-template-rows: auto auto 255px auto;
       margin-top: 40rem;
+      grid-row-gap: 1rem;
     }
 
     h1,
@@ -179,6 +180,12 @@ nav {
 
     .heading {
       margin-top: -5rem;
+    }
+  }
+
+  .about {
+    .divider {
+      grid-column: 2;
     }
   }
 }
