--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -131,5 +131,16 @@
       padding-top: 0;
       margin-top: 0;
     }
+
+    ul li {
+      width: 32rem;
+    }
+
+    &__card {
+      .card--accent {
+        width: 27rem;
+        right: -91px;
+      }
+    }
   }
 }
