--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -6,8 +6,8 @@
   margin: 0;
   text-decoration: none;
   background: #ecedfb;
-  color: $base-color-blue;
-  border: 1px solid $base-color-blue;
+  color: $primary-blue;
+  border: 1px solid $primary-blue;
   border-radius: 30px;
   font-size: var(--p);
   cursor: pointer;
@@ -26,11 +26,11 @@
 .btn:hover,
 .btn:focus {
   background: $base-color-light;
-  color: $base-color-blue;
+  color: $primary-blue;
 }
 
 .btn:focus {
-  outline: 1px solid $base-color-blue;
+  outline: 1px solid $primary-blue;
   outline-offset: -4px;
 }
 
@@ -63,7 +63,7 @@
 
 a {
   text-decoration: none;
-  color: $base-color-blue;
+  color: $primary-blue;
   position: relative;
   transition: all 0.3s ease-in-out;
   font-weight: 400;
