--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -39,10 +39,8 @@ h4 {
 }
 
 .subTitle {
-  // position: absolute;
   transform: rotate(270deg);
   transform-origin: 0% 0%;
-  // text-orientation: sideways;
   opacity: 0.3;
   text-transform: uppercase;
   letter-spacing: 1.5px;
@@ -58,6 +56,21 @@ small,
   .hero {
     p {
       line-height: 3.8rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $ds-small) {
+  .work {
+    &__card {
+      .card--title {
+        font-size: var(--h4);
+        letter-spacing: 0px;
+      }
+
+      h4 {
+        font-size: var(--p);
+      }
     }
   }
 }
