--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -1,14 +1,13 @@
 .work {
   h1 {
     color: $base-color-dark;
-    margin-bottom: 10rem;
+    max-width: 25ch;
   }
 
-  /* Selecting the subheading under the main title */
   h1 + h4 {
-    color: $base-color-dark;
-    left: -5rem;
-    top: 32.5rem;
+    transform: rotate(0);
+    color: $base-color-lightgrey;
+    opacity: 1;
   }
 
   .divider {
@@ -28,23 +27,23 @@
       }
 
       &-2 {
-        right: -20%;
+        right: -10%;
         top: -10%;
       }
 
       &-3 {
-        left: -40rem;
-        top: 15%;
+        right: 5%;
+        top: 70rem;
       }
 
       &-4 {
-        right: -10%;
-        bottom: 10rem;
+        left: 5%;
+        top: 70rem;
       }
 
       &-5 {
-        right: -40rem;
-        top: 40%;
+        left: 35rem;
+        top: 9%;
       }
     }
   }
@@ -52,21 +51,31 @@
   &__card {
     --cardHeight: 35rem;
     --mockupHeight: 230px;
-    width: 90rem;
     height: var(--cardHeight);
     border-radius: 1.5rem;
-    background-color: $base-color-dark;
-    color: $base-color-white;
+    // background-color: $base-color-dark;
+    background-color: hsla(235, 52%, 94%, 1);
+    color: hsla(235, 42%, 68%, 1);
+
     margin-bottom: 8rem;
     box-shadow: $medium-shadow;
     position: relative;
     overflow: hidden;
-    padding: 2rem 4rem;
     transition: all 0.3s ease-in-out;
 
+    h2,
+    h4 {
+      z-index: 10;
+    }
+
+    h2 {
+      color: hsla(228, 55%, 25%, 1);
+    }
+
     &:hover {
-      transform: scale(1.01);
-      box-shadow: (2px 25px 20px -6px hsla(0, 0%, 28%, 0.2));
+      transform: translateY(-0.5rem);
+      // box-shadow: (2px 25px 20px -6px hsla(0, 0%, 28%, 0.2));
+      box-shadow: (2px 25px 20px -6px hsla(0, 0%, 40%, 0.3));
     }
 
     &--wrapper {
@@ -75,12 +84,27 @@
     }
 
     .img__wrapper {
-      position: absolute;
-      right: 6rem;
-      top: calc((var(--cardHeight) - var(--mockupHeight)) / 2);
+      width: 40rem;
+      position: relative;
+      z-index: 1;
+
+      &::after {
+        content: "";
+        z-index: -1;
+        justify-self: center;
+        position: absolute;
+        top: -10rem;
+        left: -4rem;
+        height: 475px;
+        width: 475px;
+        border-radius: 50%;
+        background-color: #e8e9f8;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23164fe2' fill-opacity='0.18' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
+      }
     }
 
     .card {
+      position: relative;
       &--accent {
         clip-path: polygon(69% 0, 100% 0, 100% 100%, 0% 100%);
         background: radial-gradient(
@@ -92,8 +116,6 @@
         height: calc(var(--cardHeight) + 2px);
         width: 60rem;
         position: absolute;
-        top: 0;
-        right: -1px;
       }
 
       &--title {
@@ -105,8 +127,8 @@
 
     .view {
       &__wrapper {
-        position: absolute;
-        bottom: 2rem;
+        // position: absolute;
+        // bottom: 2rem;
         display: flex;
         align-items: center;
 
@@ -124,23 +146,63 @@
   }
 }
 
-@media only screen and (max-width: $ds-small) {
+@media only screen and (max-width: $ds-725) {
   .work {
-    h4 {
-      transform: rotate(0deg);
-      padding-top: 0;
-      margin-top: 0;
-    }
-
-    ul li {
-      width: 32rem;
-    }
-
     &__card {
-      .card--accent {
-        width: 27rem;
-        right: -91px;
+      padding-bottom: 2rem;
+      .img__wrapper {
+        width: 35rem;
+        &::after {
+          top: 2rem;
+          left: -5rem;
+        }
       }
     }
   }
+}
+
+@media only screen and (max-width: $ds-shmedium) {
+  .work {
+    &__card {
+      .card--title {
+        font-size: 4rem;
+        letter-spacing: 1px;
+      }
+      .img__wrapper {
+        width: 29rem;
+        align-self: center;
+        &::after {
+          left: -8rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: $ds-small) {
+  // .work {
+  //   &__card {
+  //     .card {
+  //       &--accent {
+  //         width: 27rem;
+  //         right: -91px;
+  //       }
+
+  //       &--title {
+  //         font-size: var(--h2);
+  //         letter-spacing: 0px;
+  //       }
+  //     }
+
+  //     .view__wrapper {
+  //       visibility: hidden;
+  //     }
+
+  //     .img__wrapper {
+  //       right: -9rem;
+  //       top: 11.5rem;
+  //       width: 33rem;
+  //     }
+  //   }
+  // }
 }
