--- a/src/sass/_work.scss
+++ b/src/sass/_work.scss
@@ -5,7 +5,6 @@
   }
 
   h1 + h4 {
-    transform: rotate(0);
     color: $base-color-lightgrey;
     opacity: 1;
   }
@@ -54,14 +53,19 @@
     height: var(--cardHeight);
     border-radius: 1.5rem;
     // background-color: $base-color-dark;
-    background-color: hsla(235, 52%, 94%, 1);
-    color: hsla(235, 42%, 68%, 1);
+    background-image: linear-gradient(
+      to right,
+      hsla(229, 12%, 48%, 1) 10%,
+      hsla(229, 12%, 36%, 1) 100%
+    );
+
+    color: hsla(235, 49%, 75%, 1);
 
     margin-bottom: 8rem;
     box-shadow: $medium-shadow;
     position: relative;
     overflow: hidden;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 
     h2,
     h4 {
@@ -69,7 +73,7 @@
     }
 
     h2 {
-      color: hsla(228, 55%, 25%, 1);
+      color: hsla(224, 16%, 89%, 1);
     }
 
     &:hover {
@@ -93,13 +97,13 @@
         z-index: -1;
         justify-self: center;
         position: absolute;
-        top: -10rem;
-        left: -4rem;
-        height: 475px;
-        width: 475px;
+        top: -7rem;
+        left: 1rem;
+        height: 380px;
+        width: 380px;
         border-radius: 50%;
-        background-color: #e8e9f8;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23164fe2' fill-opacity='0.18' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
+        background-color: hsla(242, 89%, 72%, 0);
+        background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23bbc0ce' fill-opacity='0.4'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
       }
     }
 
@@ -121,7 +125,7 @@
       &--title {
         font-weight: 900;
         font-size: 4.5rem;
-        letter-spacing: 2px;
+        letter-spacing: 1px;
       }
     }
 
@@ -153,8 +157,8 @@
       .img__wrapper {
         width: 35rem;
         &::after {
-          top: 2rem;
-          left: -5rem;
+          top: 0rem;
+          left: -1.5rem;
         }
       }
     }
@@ -165,14 +169,14 @@
   .work {
     &__card {
       .card--title {
-        font-size: 4rem;
+        font-size: 3rem;
         letter-spacing: 1px;
       }
       .img__wrapper {
         width: 29rem;
         align-self: center;
         &::after {
-          left: -8rem;
+          left: -4rem;
         }
       }
     }
