modify card drop shadow

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -26,4 +26,4 @@ $hero-bar-color: hsla(228, 92%, 60%, 1);
 $bg-shape-color: hsla(228, 90%, 76%, 0.1);
 
 /* Shadows */
-$medium-shadow: (2px 16px 33px -6px hsla(0, 0%, 28%, 0.35));
+$medium-shadow: (3px 12px 20px -3px rgba(71, 71, 71, 0.8));
